--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --ignore \"./data\" server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set PORT=3030&nodemon --ignore \"./data\" server.js",
+    "start": "node server.js"
   },
   "author": "omer teper",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cryptr": "^6.3.0",
     "express": "^4.19.2",
     "follow-redirects": "^1.15.6"
   }
